--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>System Update Service</title>
-    <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f3f3f3; color: #333; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .container { text-align: center; border: 1px solid #ddd; padding: 50px; background: white; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        h1 { color: #0078d4; }
-        p { font-size: 1.1em; }
-        .loader { border: 4px solid #f3f3f3; border-top: 4px solid #0078d4; border-radius: 50%; width: 40px; height: 40px; animation: spin 2s linear infinite; margin: 20px auto; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    </style>
-</head>
+<head><title>404 Not Found</title></head>
 <body>
-    <div class="container">
-        <h1>Microsoft Assets Content Delivery Network</h1>
-        <div class="loader"></div>
-        <p>Service Status: <strong>Maintenance in progress</strong></p>
-        <p>Telemetry and patch delivery nodes are currently synchronizing. Please do not close this connection.</p>
-    </div>
+<center><h1>404 Not Found</h1></center>
+<hr><center>nginx/1.14.0 (Ubuntu)</center>
 </body>
 </html>
